.deploy/k8s/k8s-manifest.demo.yaml
---
kind: Service
apiVersion: v1
metadata:
    name: ever-demo-admin-lb
spec:
    type: ClusterIP
    selector:
        app: ever-demo-admin
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 4200

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: ever-demo-admin-lb-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    rules:
        - host: admindemo.ever.co
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ever-demo-admin-lb
                            port:
                                number: 80
    tls:
        - hosts:
              - admindemo.ever.co
          secretName: admindemo.ever.co-tls

---
kind: Service
apiVersion: v1
metadata:
    name: ever-demo-shop-lb
spec:
    type: ClusterIP
    selector:
        app: ever-demo-shop-web-angular
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 4200

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: ever-demo-shop-lb-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    rules:
        - host: shopdemo.ever.co
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ever-demo-shop-lb
                            port:
                                number: 80
    tls:
        - hosts:
              - shopdemo.ever.co
          secretName: shopdemo.ever.co-tls

---
kind: Service
apiVersion: v1
metadata:
    name: ever-demo-mobile-shop-lb
spec:
    type: ClusterIP
    selector:
        app: ever-demo-shop-mobile-ionic
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 4201

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: ever-demo-mobile-shop-lb-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    rules:
        - host: mobileshopdemo.ever.co
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ever-demo-mobile-shop-lb
                            port:
                                number: 80
    tls:
        - hosts:
              - mobileshopdemo.ever.co
          secretName: mobileshopdemo.ever.co-tls

---
kind: Service
apiVersion: v1
metadata:
    name: ever-demo-carrier-mobile-ionic-lb
spec:
    type: ClusterIP
    selector:
        app: ever-demo-carrier-mobile-ionic
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 4203

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: ever-demo-carrier-mobile-ionic-lb-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    rules:
        - host: mobilecarrierdemo.ever.co
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ever-demo-carrier-mobile-ionic-lb
                            port:
                                number: 80
    tls:
        - hosts:
              - mobilecarrierdemo.ever.co
          secretName: mobilecarrierdemo.ever.co-tls

---
kind: Service
apiVersion: v1
metadata:
    name: ever-demo-merchant-tablet-ionic-lb
spec:
    type: ClusterIP
    selector:
        app: ever-demo-merchant-tablet-ionic
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 4202

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: ever-demo-merchant-tablet-ionic-lb-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    rules:
        - host: merchantdemo.ever.co
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ever-demo-merchant-tablet-ionic-lb
                            port:
                                number: 80
    tls:
        - hosts:
              - merchantdemo.ever.co
          secretName: merchantdemo.ever.co-tls

---
kind: Service
apiVersion: v1
metadata:
    name: ever-demo-api-lb
spec:
    type: ClusterIP
    selector:
        app: ever-demo-api
    ports:
        - name: rest-api-http
          protocol: TCP
          port: 80
          targetPort: 5500
        - name: gql-api-http
          protocol: TCP
          port: 8443
          targetPort: 8443
        - name: gql-subscriptions-ws
          protocol: TCP
          port: 2086
          targetPort: 2086

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: ever-demo-api-lb-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    rules:
        - host: apidemo.ever.co
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ever-demo-api-lb
                            port:
                                number: 80
    tls:
        - hosts:
              - apidemo.ever.co
          secretName: apidemo.ever.co-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ever-demo-api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ever-demo-api
    template:
        metadata:
            labels:
                app: ever-demo-api
        spec:
            containers:
                - name: ever-demo-api
                  image: ghcr.io/ever-co/ever-api:latest
                  ports:
                      - containerPort: 5500
                        protocol: TCP
                      # We use LB, so no need to expose HTTPS, only HTTP required
                      # - containerPort: 2087
                      #   protocol: TCP
                      - containerPort: 8443
                        protocol: TCP
                      - containerPort: 2086
                        protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ever-demo-admin
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ever-demo-admin
    template:
        metadata:
            labels:
                app: ever-demo-admin
        spec:
            containers:
                - name: ever-demo-admin
                  image: ghcr.io/ever-co/ever-admin-angular:latest
                  ports:
                      - containerPort: 4200
                        protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ever-demo-carrier-mobile-ionic
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ever-demo-carrier-mobile-ionic
    template:
        metadata:
            labels:
                app: ever-demo-carrier-mobile-ionic
        spec:
            containers:
                - name: ever-demo-carrier-mobile-ionic
                  image: ghcr.io/ever-co/ever-carrier-ionic:latest
                  ports:
                      - containerPort: 4203
                        protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ever-demo-shop-mobile-ionic
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ever-demo-shop-mobile-ionic
    template:
        metadata:
            labels:
                app: ever-demo-shop-mobile-ionic
        spec:
            containers:
                - name: ever-demo-shop-mobile-ionic
                  image: ghcr.io/ever-co/ever-shop-ionic:latest
                  ports:
                      - containerPort: 4201
                        protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ever-demo-merchant-tablet-ionic
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ever-demo-merchant-tablet-ionic
    template:
        metadata:
            labels:
                app: ever-demo-merchant-tablet-ionic
        spec:
            containers:
                - name: ever-demo-merchant-tablet-ionic
                  image: ghcr.io/ever-co/ever-merchant-ionic:latest
                  ports:
                      - containerPort: 4202
                        protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ever-demo-shop-web-angular
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ever-demo-shop-web-angular
    template:
        metadata:
            labels:
                app: ever-demo-shop-web-angular
        spec:
            containers:
                - name: ever-shop-web-angular
                  image: ghcr.io/ever-co/ever-shop-angular:latest
                  ports:
                      - containerPort: 4200
                        protocol: TCP
